Fix targeting contacts going out of bounds.

--- a/src/components/views/Targeting/style.scss
+++ b/src/components/views/Targeting/style.scss
@@ -17,6 +17,9 @@
     border: solid 1px rgba(0,255,0,0.5);
     position: relative;
     overflow: hidden;
+    span {
+      position: absolute;
+    }
     .lines-x,
     .lines-y {
       position: absolute;
